# musicbox

./: .gitignore  README.md  agent.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.dev/: AI_RULES.md  CURRENT.md  LOG.md  PROCESS.md  SYSTEM_REFERENCE.md
.dev/tasks/active/: 2026-03-11-desktop-drum-sequencer-v1.md
.dev/tasks/archive/: 2026-03-11-200049-bootstrap-thin-runtime.md  2026-03-11-human-flow-bug-hunt.md
public/samples/: ATTRIBUTION.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  styles.css
src/features/ai/: fallback.ts
src/features/audio/: useTransport.ts
src/features/sequencer/: model.ts  state.test.ts  state.ts
src/platform/: bridge.ts
tests/e2e/: musicbox.spec.ts
