[package]
name = "musicbox"
version = "0.1.0"
description = "Native desktop drum sequencer with AI-assisted composition"
edition = "2021"
build = "build.rs"

[lib]
name = "musicbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
midir = "0.10.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
